fixed the overflow issue

--- a/responsive.css
+++ b/responsive.css
@@ -1,4 +1,12 @@
-@media screen and (max-width: 576px) {
+@media screen and (max-width: 480px) {
+    html, body{
+        width:  100%;
+        height:  100%;
+        margin: 0;
+        padding: 0;
+        overflow-x: hidden;
+    }
+    
     .nav-menu, .nav-container, .banner-container, .video-container, .play-container{
         flex-direction: column;
         gap: 30px;
